gitops/apps/admin-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: admin-server
